--- a/planet.css
+++ b/planet.css
@@ -11,26 +11,27 @@ body {
 
 /* Aside */
 
-/* .aside-container {
-    display: fixed;
-    left: 20rem;
-} */
+.aside--container {
+    position: fixed;
+    height: 100vh;
+    left: -85vh;
+}
 
 .aside--circle1 {
-    position: fixed;
-    top: 20rem;
-    left: 20rem;
+    position: absolute;
 
-    /* height: calc(100vh * 1.35); */
-    height: 10rem;
+    height: 100%;
     aspect-ratio: 1/1;
     border-radius: 100%;
     background-color: #428ed4;
 }
 
 .aside--circle2 {
-    display: fixed;
-    height: calc(100vh * 1.35);
+    position: absolute;
+    top: -2.5%;
+    left: -2.5%;
+
+    height: 105%;
     aspect-ratio: 1/1;
     border-radius: 100%;
     background-color: #428ed4;
@@ -38,10 +39,26 @@ body {
 }
 
 .aside--circle3 {
-    display: fixed;
-    height: calc(100vh * 1.35);
+    position: absolute;
+    top: -5%;
+    left: -5%;
+
+    height: 110%;
     aspect-ratio: 1/1;
     border-radius: 100%;
     background-color: #428ed4;
     opacity: 6%;
+}
+
+/* Content */
+
+.content--container {
+    position: absolute;
+    top: 10%;
+    left: 30%;
+    width: 45%;
+    max-width: 35rem;
+
+    display: flex;
+    flex-direction: column;
 }
