--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -32,16 +32,12 @@ h1 {
       color: white;
       margin-bottom: 1rem;
     }
-    figure {
-      display: flex;
+    .planet-div {
+      color: white;
+      border-radius: 50%;
       width: 100%;
       padding: 1rem;
-      img {
-        background-color: red;
-        border-radius: 50%;
-        width: 100%;
-        aspect-ratio: 1 / 1;
-      }
+      aspect-ratio: 1 / 1;
     }
   }
 }
