--- a/planet.css
+++ b/planet.css
@@ -1,12 +1,115 @@
+/* Fonts */
+
+@import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
+/* .secular-one-regular {
+  font-family: "Secular One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+} */
+
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Secular+One&display=swap");
+/* <uniquifier>: Use a unique and descriptive class name
+<weight>: Use a value from 400 to 700
+.lora-<uniquifier> {
+  font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+} */
+
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Secular+One&display=swap");
+/* <uniquifier>: Use a unique and descriptive class name
+<weight>: Use a value from 100 to 900
+
+.roboto-condensed-<uniquifier> {
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+} */
+
+.description--name,
+.main--data > article > h3,
+.main--moons > h3,
+.footer--copyright {
+    font-family: "Secular One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
+.description--name {
+    font-size: 3rem;
+    letter-spacing: 2px;
+}
+
+.description--latin {
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 10px;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    color: #ffd029;
+}
+
+.description--text,
+.main--data > article > p,
+.main--moons > p {
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+    color: #ffffff;
+    font-size: 1rem;
+    line-height: 1.5rem;
+}
+
 /* Globals */
 
 :root {
     box-sizing: border-box;
 }
 
-body {
+body,
+header,
+main,
+footer,
+article,
+section,
+h1,
+h2,
+h3,
+p {
     margin: 0;
     padding: 0;
+}
+
+body {
+    /* background-image: url("./assets/star-transparent.png"); */
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* background-position: center top; */
+    background-attachment: fixed;
+
+    background-image: linear-gradient(to right, #221f57, #0a0526);
+}
+
+/* Background */
+
+.starry-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    min-width: 100vw;
+    min-height: 100vh;
+}
+
+.starry-background > img {
+    width: 100%;
+    /* min-height: 100%; */
 }
 
 /* Aside */
@@ -61,4 +164,45 @@ body {
 
     display: flex;
     flex-direction: column;
+}
+
+/* Header */
+
+.header--container {
+    margin-top: 1rem;
+}
+
+/* Main */
+
+.main--description {
+    margin-top: 1.5rem;
+}
+
+.main--data,
+.main--moons {
+    margin-top: 1.5rem;
+    border-top: 1px solid rgb(255, 255, 255, 0.2);
+}
+
+.main--data {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.main--data > article,
+.main--moons > h3 {
+    margin-top: 1rem;
+}
+
+.main--data > article > p {
+    letter-spacing: 2px;
+}
+
+/* Footer */
+
+.footer--container {
+    display: flex;
+    justify-content: center;
+
+    margin: 2rem 0;
 }
