--- a/index.css
+++ b/index.css
@@ -10,19 +10,28 @@ body {
     font-family: 'Arial', sans-serif;
 }
 
-.container {
+header {
+    margin-bottom: 20px;
+}
+
+header h1 {
+    font-size: 3rem;
+    margin: 0;
+}
+#home-page {
     text-align: center;
 }
 
-h1 {
-    font-size: 3rem;
+nav {
     margin-bottom: 2rem;
 }
 
-.planets {
+#planet-list {
     display: flex;
     justify-content: center;
     align-items: center;
+    list-style-type: none;
+    padding: 0;
 }
 
 .planet {
@@ -115,6 +124,20 @@ h1 {
     background-color: #809fff;
 }
 
+#favorites-link {
+    display: inline-block;
+    margin-top: 2rem;
+    padding: 0.5rem 1rem;
+    background-color: #ffffff33;
+    border-radius: 0.5rem;
+    text-decoration: none;
+    color: white;
+    transition: background-color 0.3s ease;
+}
+
+#favorites-link:hover {
+    background-color: #ffffff55;
+}
 
 
 
