--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -1,4 +1,9 @@
 /* Made by Rasmus */
+
+@import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Secular+One&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -16,7 +21,12 @@ body {
 }
 
 h1 {
-  color: white;
+  font-family: "Secular One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: uppercase;
+  color: #ffffff;
+  letter-spacing: 2px;
   text-align: center;
   margin-bottom: 3rem;
   font-size: 3rem;
@@ -30,7 +40,14 @@ h1 {
     padding: 1rem;
     h2 {
       text-align: center;
-      color: white;
+      font-family: "Lora", serif;
+      font-optical-sizing: auto;
+      font-weight: 400;
+      font-style: normal;
+      letter-spacing: 10px;
+      text-transform: uppercase;
+      font-size: 1.2rem;
+      color: #ffd029;
       margin-bottom: 1rem;
     }
     .planet-div {
