--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -84,3 +84,13 @@ h1 {
     }
   }
 }
+
+@media screen and (width < 1100px) {
+  .favorites-card-wrapper {
+    div {
+      h2 {
+        font-size: 0.9rem;
+      }
+    }
+  }
+}
