--- a/Planet/planet.css
+++ b/Planet/planet.css
@@ -91,28 +91,12 @@ p {
 }
 
 body {
-    /* background-image: url("./assets/star-transparent.png"); */
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-image: url("../assets/star-transparent.png"),
+        linear-gradient(to right, #221f57, #0a0526);
+    background-size: cover, cover;
+    background-repeat: no-repeat, no-repeat;
     /* background-position: center top; */
-    background-attachment: fixed;
-
-    background-image: linear-gradient(to right, #221f57, #0a0526);
-}
-
-/* Background */
-
-.starry-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    min-width: 100vw;
-    min-height: 100vh;
-}
-
-.starry-background > img {
-    width: 100%;
-    /* min-height: 100%; */
+    background-attachment: fixed, fixed;
 }
 
 /* Aside */
