--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -32,6 +32,27 @@ h1 {
   font-size: 3rem;
 }
 
+.favorites-nav {
+  width: 6rem;
+  height: 6rem;
+  aspect-ratio: 1/1;
+  border: none;
+  border-radius: 100%;
+  background-color: rgb(16, 3, 65);
+  font-family: "Secular One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: uppercase;
+  color: #ffffff;
+  box-shadow: 0px 0px 30px 10px rgba(84, 121, 213, 0.5);
+  transition: 0.3s;
+}
+
+.favorites-nav:hover {
+  cursor: pointer;
+  background-color: rgb(32, 16, 88);
+}
+
 .back-wrapper {
   display: flex;
   flex-direction: row;
