--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -125,6 +125,20 @@ h1 {
   }
 }
 
+footer {
+  display: flex;
+  justify-content: center;
+  padding-top: 2rem;
+  margin-top: auto;
+  p {
+    font-family: "Secular One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+}
+
 @media screen and (width < 1100px) {
   .favorites-card-wrapper {
     div {
