--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -54,14 +54,14 @@ h1 {
   font-style: normal;
   text-transform: uppercase;
   color: #ffffff;
-  box-shadow: 0px 0px 30px 10px rgba(84, 121, 213, 0.5);
+  box-shadow: 0px 0px 30px 10px rgba(81, 111, 187, 0.5);
   transition: 0.3s;
   margin: 0 0 1rem 1rem;
 }
 
 .favorites-nav:hover {
   cursor: pointer;
-  background-color: rgb(32, 16, 88);
+  background-color: rgb(64, 32, 182);
 }
 
 .favorites-card-wrapper {
@@ -74,6 +74,7 @@ h1 {
     padding: 2rem;
     transition: 0.5s;
     h2 {
+      margin-left: 12px;
       text-align: center;
       font-family: "Lora", serif;
       font-optical-sizing: auto;
@@ -91,6 +92,9 @@ h1 {
       width: 100%;
       padding: 1rem;
       aspect-ratio: 1 / 1;
+    }
+    .planet-div:hover {
+      cursor: pointer;
     }
     #planet-color-0 {
       background-color: #f5d026;
