--- a/Index/index.css
+++ b/Index/index.css
@@ -2,9 +2,9 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  background: linear-gradient(to right, #0C164D, #190B22);
+  background: linear-gradient(to right, #0c164d, #190b22);
   color: white;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   display: flex;
   justify-content: flex-end; /* Aligns content to the right */
   align-items: flex-start; /* Aligns content to the top */
@@ -21,29 +21,28 @@ header {
 header h1 {
   width: 625px;
   height: 60px;
-  font-family: 'Secular One';
+  font-family: "Secular One";
   font-style: normal;
   font-weight: 400;
   font-size: 60px;
   line-height: 100%;
   text-align: right;
   letter-spacing: 0.09em;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 header h2 {
   width: 625px;
   height: 24px;
-  font-family: 'Lora';
+  font-family: "Lora";
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 100%;
   text-align: right;
   letter-spacing: 0.6em;
-  color: #FFD029;
+  color: #ffd029;
 }
-
 
 #home-page {
   text-align: center;
@@ -88,7 +87,7 @@ nav {
 .sun {
   width: 118px;
   height: 740.12px;
-background-color: #FFD029;
+  background-color: #ffd029;
 }
 
 .mercury {
@@ -98,33 +97,33 @@ background-color: #FFD029;
 }
 
 .venus {
-  width: 26x;
+  width: 26px;
   height: 26px;
-  background-color: #E7CDCD;
+  background-color: #e7cdcd;
 }
 
 .earth {
   width: 28px;
   height: 28px;
-  background-color: #428ED4;
+  background-color: #428ed4;
 }
 
 .mars {
   width: 14px;
   height: 14px;
-  background-color: #EF5F5F;
+  background-color: #ef5f5f;
 }
 
 .jupiter {
   width: 188px;
   height: 188px;
-  background-color: #E29468;
+  background-color: #e29468;
 }
 
 .saturn {
   width: 144px;
   height: 144px;
-  background-color: #C7AA72;
+  background-color: #c7aa72;
   position: relative;
   border-radius: 50%; /* Ensure Saturn is a circle */
 }
@@ -143,23 +142,16 @@ background-color: #FFD029;
   z-index: 1;
 }
 
-
-
-
-
-
-
-
 .uranus {
   width: 66px;
   height: 66px;
-  background-color: #C9D4F1;
+  background-color: #c9d4f1;
 }
 
 .neptune {
   width: 66px;
   height: 66px;
-  background-color: #7A91A7;
+  background-color: #7a91a7;
 }
 
 #favorites-link {
@@ -176,6 +168,3 @@ background-color: #FFD029;
 #favorites-link:hover {
   background-color: #ffffff55;
 }
-
-  
-  
