--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -142,12 +142,8 @@ footer {
   }
 }
 
-@media screen and (width < 1100px) {
+@media screen and (width < 1280px) {
   .favorites-card-wrapper {
-    div {
-      h2 {
-        font-size: 0.9rem;
-      }
-    }
+    grid-template-columns: repeat(3, 1fr);
   }
 }
