--- a/Index/index.css
+++ b/Index/index.css
@@ -1,294 +1,276 @@
 body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  background: linear-gradient(to right, #0C164D, #190B22);
-  color: white;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    background: linear-gradient(to right, #0c164d, #190b22);
+    color: white;
 
-  font-family: 'Secular One', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-
+    font-family: "Secular One", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
 }
 
 header {
-  position: absolute;
+    position: absolute;
 
-  top: 20px;
-  right: 20px;
-  text-align: right;
-
+    top: 20px;
+    right: 20px;
+    text-align: right;
 }
 
 header h1 {
-  width: 625px;
-  height: 60px;
-  font-family: 'Secular One';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 60px;
-  line-height: 100%;
-  text-align: right;
-  letter-spacing: 0.09em;
-  color: #FFFFFF;
-
+    width: 625px;
+    height: 60px;
+    font-family: "Secular One";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 100%;
+    text-align: right;
+    letter-spacing: 0.09em;
+    color: #ffffff;
 }
 
 header h2 {
-  width: 625px;
-  height: 24px;
-  font-family: 'Lora';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 100%;
-  text-align: right;
-  letter-spacing: 0.6em;
-  color: #FFD029;
+    width: 625px;
+    height: 24px;
+    font-family: "Lora";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 100%;
+    text-align: right;
+    letter-spacing: 0.6em;
+    color: #ffd029;
+}
 
+nav {
+    display: flex;
+    justify-content: center;
+    width: 80vw;
 }
 
 #planet-list {
-  display: flex;
+    display: flex;
 
-  justify-content: space-between;
-  align-items: center;
-  list-style-type: none;
-  padding: 0;
-  margin: 4rem 0 0;
-  width: 80%;
-  max-width: 1000px;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+    padding: 0;
+    margin: 4rem 0 0;
+    width: 100%;
+    max-width: 1000px;
 }
 
 .planet {
-  position: relative;
-  margin: 0 2rem; /* Increased margin for more space between planets */
-  border-radius: 50%;
-  flex-shrink: 0;
-  text-align: center; /* Center-align text within the planet */
+    position: relative;
+    margin: 0 1rem;
+    /* Increased margin for more space between planets */
+    border-radius: 50%;
+    flex-shrink: 0;
+    text-align: center; /* Center-align text within the planet */
 }
 
 .planet::after {
-  content: attr(data-name);
-  position: absolute;
-  bottom: -30px; /* Adjust this value as needed */
-  left: 50%;
-  transform: translateX(-50%);
-  background: rgba(0, 0, 0, 0.7);
-  color: #fff;
-  padding: 4px 8px;
-  border-radius: 4px;
-  white-space: nowrap;
-  font-size: 14px;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  pointer-events: none; /* Makes sure it doesn't interfere with hover state */
+    content: attr(data-name);
+    position: absolute;
+    bottom: -30px; /* Adjust this value as needed */
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 4px 8px;
+    border-radius: 4px;
+    white-space: nowrap;
+    font-size: 14px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    pointer-events: none; /* Makes sure it doesn't interfere with hover state */
 }
 
 .planet:hover::after {
-  opacity: 1;
+    opacity: 1;
 }
 
-
 .mercury::after {
-  content: "Mercury";
+    content: "Mercury";
 }
 
 .venus::after {
-  content: "Venus";
+    content: "Venus";
 }
 
 .earth::after {
-  content: "Earth";
+    content: "Earth";
 }
 
 .mars::after {
-  content: "Mars";
-
+    content: "Mars";
 }
 
 .jupiter::after {
-  content: "Jupiter";
+    content: "Jupiter";
 }
 
 .saturn::after {
-  content: "Saturn";
+    content: "Saturn";
 }
 
 .uranus::after {
-  content: "Uranus";
+    content: "Uranus";
 }
 
 .neptune::after {
-  content: "Neptune";
+    content: "Neptune";
 }
 
-
 .sun {
-
-  width: 400px;
-  height: 600px;
-  background-color: #FFD029;
-  position: absolute;
-  left: -350px; /* Half of the width to align the center */
+    width: 400px;
+    height: 600px;
+    background-color: #ffd029;
+    position: absolute;
+    left: -350px; /* Half of the width to align the center */
 }
 
 .sun::after {
-  content: "Sun";
-  position: absolute; /* Absolute positioning to place the label relative to the .sun element */
-  top: 50%; /* Center vertically */
-  left: 100%;
+    content: "Sun";
+    position: absolute; /* Absolute positioning to place the label relative to the .sun element */
+    top: 50%; /* Center vertically */
+    left: 100%;
+    height: 1.1rem;
 }
 .mercury {
-  width: 14px;
-  height: 14px;
-  background-color: #888888;
+    width: 14px;
+    height: 14px;
+    background-color: #888888;
 }
 
 .venus {
-
-  width: 26px;
+    width: 26px;
     height: 26px;
-    background-color: #E7CDCD;
+    background-color: #e7cdcd;
     position: relative;
     border: none;
 }
 
 .venus .planet-gif {
-  position: absolute;
-  transform: translate(-50%, -50%);
-  width: 120px; /* Adjust size as needed */
-  height: 120px; /* Make height equal to width to ensure round shape */
-  border-radius: 50%;
-  display: none; /* Initially hidden */
+    position: absolute;
+    transform: translate(-50%, -50%);
+    width: 120px; /* Adjust size as needed */
+    height: 120px; /* Make height equal to width to ensure round shape */
+    border-radius: 50%;
+    display: none; /* Initially hidden */
 }
 
 .venus:hover .planet-gif {
-  display: block; /* Make GIF visible when hovering over Venus */
-
+    display: block; /* Make GIF visible when hovering over Venus */
 }
 
 .earth {
-  width: 28px;
-  height: 28px;
-  background-color: #428ED4;
+    width: 28px;
+    height: 28px;
+    background-color: #428ed4;
 }
 
 .mars {
-  width: 14px;
-  height: 14px;
-  background-color: #EF5F5F;
+    width: 14px;
+    height: 14px;
+    background-color: #ef5f5f;
 }
 
 .jupiter {
-  width: 188px;
-  height: 188px;
-  background-color: #E29468;
+    width: 188px;
+    height: 188px;
+    background-color: #e29468;
 }
 
 .saturn {
-  width: 144px;
-  height: 144px;
-  background-color: #C7AA72;
-  position: relative;
+    width: 144px;
+    height: 144px;
+    background-color: #c7aa72;
+    position: relative;
 
-  border-radius: 50%;
-
+    border-radius: 50%;
 }
 
-
-
-
-
-
-
-
 .uranus {
-  width: 66px;
-  height: 66px;
-  background-color: #C9D4F1;
+    width: 66px;
+    height: 66px;
+    background-color: #c9d4f1;
 }
 
 .neptune {
-  width: 66px;
-  height: 66px;
-  background-color: #7A91A7;
-
+    width: 66px;
+    height: 66px;
+    background-color: #7a91a7;
 }
 
-
 .scene {
-  width: 200px;
-  height: 200px;
-  perspective: 1000px;
+    width: 200px;
+    height: 200px;
+    perspective: 1000px;
 }
 
 .saturn {
-  position: relative;
-  width: 100px;
-  height: 100px;
-  background-color: #d2b48c;
-  border-radius: 50%;
-  transform-style: preserve-3d;
-  transform: rotateY(0deg);
+    position: relative;
+    width: 100px;
+    height: 100px;
+    background-color: #d2b48c;
+    border-radius: 50%;
+    transform-style: preserve-3d;
+    transform: rotateY(0deg);
 }
 
 .ring-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 250px;
-  height: 250px;
-  transform: translate(-50%, -50%);
-  transform-style: preserve-3d;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 250px;
+    height: 250px;
+    transform: translate(-50%, -50%);
+    transform-style: preserve-3d;
 }
 
 .ring {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 160px;
-  height: 123px;
-  background: rgba(192, 192, 192, 0.5);
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-radius: 50%;
-  transform-origin: center;
-  transform: translate(-50%, -50%) rotateX(60deg);
-  animation: rotateRing 6s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 160px;
+    height: 123px;
+    background: rgba(192, 192, 192, 0.5);
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    transform-origin: center;
+    transform: translate(-50%, -50%) rotateX(60deg);
+    animation: rotateRing 6s linear infinite;
 }
 
 @keyframes rotateRing {
-  from {
-      transform: translate(-50%, -50%) rotateX(60deg) rotateZ(0deg);
-  }
-  to {
-      transform: translate(-50%, -50%) rotateX(60deg) rotateZ(360deg);
-  }
-
+    from {
+        transform: translate(-50%, -50%) rotateX(60deg) rotateZ(0deg);
+    }
+    to {
+        transform: translate(-50%, -50%) rotateX(60deg) rotateZ(360deg);
+    }
 }
 
 #favorites-link {
-  display: inline-block;
+    display: inline-block;
 
-  position: absolute;
-  bottom: 0px; /* Adjust as needed */
-  left: 50%;
-  transform: translateX(-50%);
+    position: absolute;
+    bottom: 0px; /* Adjust as needed */
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 #favorites-link img {
-  width: 120px; /* Adjust size as needed */
-  height: 120px; /* Make height equal to width to ensure round shape */
-  border-radius: 50%; /* Makes the GIF round */
-  object-fit: cover; /* Ensures the GIF covers the circle without distortion */
-  border: none; /* Remove any default border */
+    width: 120px; /* Adjust size as needed */
+    height: 120px; /* Make height equal to width to ensure round shape */
+    border-radius: 50%; /* Makes the GIF round */
+    object-fit: cover; /* Ensures the GIF covers the circle without distortion */
+    border: none; /* Remove any default border */
 }
-
-
-
-
-
