--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -27,6 +27,7 @@ header {
   position: fixed;
   width: 100%;
   background-color: rgba(107, 107, 107, 0.3);
+  z-index: 1;
 }
 
 h1 {
@@ -72,6 +73,8 @@ h1 {
   .favorites-card {
     padding: 2rem;
     transition: 0.5s;
+    position: relative;
+    z-index: 0;
     h2 {
       margin-left: 12px;
       text-align: center;
@@ -94,6 +97,18 @@ h1 {
     }
     .planet-div:hover {
       cursor: pointer;
+    }
+    #saturnus-ring {
+      background-color: white;
+      width: 110%;
+      height: 10px;
+      border-radius: 100%;
+      opacity: 0.7;
+      position: absolute;
+      /*  //left: 35%; */
+      transform: rotate(161deg);
+      top: 52%;
+      left: -5%;
     }
     #planet-color-0 {
       background-color: #f5d026;
