corrected color for neptune

--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -135,7 +135,7 @@ h1 {
       background-color: #c9d4f1;
     }
     #planet-color-8 {
-      background-color: #7a9147;
+      background-color: #7a91a7;
     }
   }
   .favorites-card:hover {
