--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -143,6 +143,16 @@ h1 {
   }
 }
 
+h3 {
+  color: white;
+  text-align: center;
+  margin-top: 4rem;
+  font-size: 2rem;
+  font-family: "Secular One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 footer {
   display: flex;
   justify-content: center;
